--- a/ReactiveUI.Samples.Wpf/Views/DapperView.xaml
+++ b/ReactiveUI.Samples.Wpf/Views/DapperView.xaml
@@ -8,5 +8,55 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Grid />
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <StackPanel
+            Grid.Row="0"
+            Orientation="Horizontal">
+            <Button
+                x:Name="AddButton"
+                Width="85"
+                Height="30"
+                Margin="5"
+                Content="Add" />
+            <Button
+                x:Name="DelectButton"
+                Width="85"
+                Height="30"
+                Margin="5"
+                Content="Delect" />
+            <Button
+                x:Name="SearchAllButton"
+                Width="85"
+                Height="30"
+                Margin="5"
+                Content="SearchAll" />
+            <Button
+                x:Name="SearchByIdButton"
+                Width="85"
+                Height="30"
+                Margin="5"
+                Content="SearchById:" />
+            <TextBox
+                x:Name="IdTextBox"
+                Width="85"
+                Height="25"
+                Margin="5"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center" />
+            <Button
+                x:Name="UpDateButton"
+                Width="85"
+                Height="30"
+                Margin="5"
+                Content="UpDate" />
+        </StackPanel>
+        <DataGrid
+            x:Name="DetailsDataGrid"
+            Grid.Row="1"
+            Margin="5" />
+    </Grid>
 </UserControl>
