complate message box base services

--- a/ReactiveUI.Samples.Wpf/Views/MainView.xaml
+++ b/ReactiveUI.Samples.Wpf/Views/MainView.xaml
@@ -8,6 +8,7 @@
     Title="MainView"
     Width="800"
     Height="450"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
